# BrainID

./: CMakeLists.txt  README  todo
code/: BoldModel.cpp  CMakeLists.txt  activate.cpp  activate_map.cpp  applymask.cpp  bold.cpp  boldgen.cpp  brainid.cpp  calc_parammap.cpp  chop.cpp  concat.cpp  copy.cpp  extract_pos.cc  fft.cpp  fmri_timeseries.cpp  make_param_image.cpp  makeest.cpp  makesine.cpp  makespline.cpp  mean_filter.cpp  modNiftiImageIO.cxx  mse.cpp  origin.cpp  parammap_diff.cpp  parammap_eval.cpp  particle.cpp  plotout.m  preprocess.cpp  printtags.cpp  prune.cpp  readdicom.cpp  reorientby.cpp  segment.cpp  setorientation.cpp  sumfmri.cpp  test.cc  tools.cc
code/bold/: CMakeLists.txt  bold.cpp
code/include/: BoldModel.hpp  BoldPF.h  ParticleFilterMod.hpp  RegularizedParticleResamplerMod.hpp  activate.h  bold.h  callbacks.h  itkLabelStatisticsImageFilterMod.h  itkLabelStatisticsImageFilterMod.txx  itkNaryElevateImageFilter.txx  modNiftiImageIO.h  particle.h  rms.cpp  segment.h  sumfmri.h  tools.h  types.h  version.h
code/utils/: CMakeLists.txt
code/utils/vul/: CMakeLists.txt  vul_arg.cxx  vul_arg.h
doc/isbi/: background.tex  conclusion.tex  discussion.tex  library.bib  main.tex  results.tex  spconf.sty  todo
doc/isbi/images/: pscale_base.xcf
doc/isbi/images/working/: pfilter_hm.xcf
doc/isbi_poster/: WyattEMBS06Poster.ppt  particle_example.cgm  particle_example.eps  particle_example.vdx  particle_example.wpg
doc/paper/: Makefile.ini  intro.tex  library.bib  main.tex  methods.tex  paper.tex  particlefilters.tex  resultsB.tex  template.tex  thesis.tex
doc/paper/images/: simslice_hm85
doc/presentation/: Makefile.ini  beamercolorthemeVT.sty  car.avi  continuous.xcf  fmri_overview.nav  fmri_overview.out  fmri_overview.tex  fmri_overview.toc  introduction.tex  library.bib  main.tex  methods.tex  nonlinear.tex  particles.xcf  pf1_video.avi  pf3_video.avi  prep.sh  references.bib  results.tex  reverse.sh  run.sh  thesis_pres.bbl  thesis_pres.blg  thesis_pres.nav  thesis_pres.out  thesis_pres.tex  thesis_pres.toc
doc/thesis/: Particle_Filters.ppt  background.tex  conclusion.tex  discussion.tex  intro.tex  library.bib  methods.tex  particlefilters.tex  personal.tex  plot.py  plotout.py  proposal.tex  proposal_micah.bib  references.bib  refs.bib  research.tex  results.tex  resultsB.tex  savedrecs.bib  stim  thesis.tex  weightedhist.py
doc/thesis/examples/: kalman.py  particle.py
doc/thesis/images/working/: pfilter85_hm.xcf  pfilter_hm.xcf  spm_hm.xcf
include/: BoldModel.hpp  ParticleFilterMod.hpp  itkNaryElevateImageFilter.h  itkNaryElevateImageFilter.txx  particle.h
scripts/: bar.py  bar3d.py  bview.py  bview_qq.py  dependencies  distplot.py  dysii.patch  gauss_step.py  gen_input.m  gen_params.sh  genpatch.sh  genrms.sh  getbuildtest.py  lapack.patch  makehist.py  makehist_init.py  makehistall.py  paramtest.py  particleexample.py  particleexample_bar.py  plot.py  plotout.m  plotout.py  plotstates.py  possum.patch  preprocess.sh  randstim.py  run.sh  showall.py  simall.m  simall.py  simall.sh
src/: CMakeLists.txt  brainid.cpp  segment.cpp  unbias.cpp
testing/: CMakeLists.txt  activate_test.cpp  bold_test.cpp  dictionary.cpp  mutual_information.cpp  particle_test.cpp  resample_test.cpp  segment_alltogether.cpp  segment_sections.cpp  segment_times.cpp  serialize.cpp  sumfmri_testalltogether.cpp  sumfmri_testsections.cpp  sumfmri_testtimes.cpp
testing/data/: testbed.nii  testbed2.nii
